--- a/host_vars/rtr2/bgp.yml
+++ b/host_vars/rtr2/bgp.yml
@@ -31,3 +31,5 @@ bgp_config:
           masklen: 24          
         - prefix: 10.36.27.0
           masklen: 24   
+        - prefix: 10.46.27.0
+          masklen: 24   
